Update plugin-api to 4.1.3